--- a/ruhr_shipping.ipynb
+++ b/ruhr_shipping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "id": "9d0ab35d-84f0-4551-a983-368fd045b7ec",
    "metadata": {},
    "outputs": [],
@@ -11,16 +11,12 @@
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
     "plt.rcParams.update({\n",
-    "    'figure.figsize': (7.5, 7.5)})\n",
-    "# Seed random number generator\n",
-    "from numpy import random as nprand\n",
-    "seed = hash(\"Network Science in Python\") % 2**32\n",
-    "nprand.seed(seed)"
+    "    'figure.figsize': (7.5, 7.5)})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "id": "692787ea-8b48-46ee-808b-17bf295a2f0a",
    "metadata": {},
    "outputs": [],
@@ -33,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 91,
    "id": "0899a917-09e9-4ca8-9e04-6304be012ee9",
    "metadata": {},
    "outputs": [
@@ -77,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "id": "d580f207-fff3-414c-afb9-fef740b44c17",
    "metadata": {},
    "outputs": [
@@ -122,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 93,
    "id": "d00f4699-911a-4345-9596-1b81abce14d9",
    "metadata": {},
    "outputs": [],
@@ -132,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 94,
    "id": "f01add75-09a3-4246-99d7-042f29fedcad",
    "metadata": {
     "scrolled": true
@@ -175,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 95,
    "id": "30d1fc62-7c06-45d0-bcb9-055b7bf1a48d",
    "metadata": {},
    "outputs": [
@@ -185,7 +181,7 @@
        "Index(['city', 'latitude', 'longitude', 'demand'], dtype='object')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 96,
    "id": "0382a53d-e0e3-4028-b8c4-1653223556cb",
    "metadata": {},
    "outputs": [],
@@ -209,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 97,
    "id": "47971f83-42ae-4e47-9fe4-30bbdeacfec7",
    "metadata": {},
    "outputs": [],
@@ -225,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 98,
    "id": "57639480-df51-4837-bd5d-9406ca8a92a9",
    "metadata": {},
    "outputs": [
@@ -263,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "id": "830fd4cd-4d52-4447-9b3f-26b25e330dc5",
    "metadata": {},
    "outputs": [
@@ -273,7 +269,7 @@
        "[0, 3, 11, 7, 1]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 100,
    "id": "2e7014f0-b096-48dc-b800-87aeee7adf87",
    "metadata": {},
    "outputs": [
@@ -295,7 +291,7 @@
        "[20]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 101,
    "id": "a2ae94b8-661d-460f-9b4a-c62a155b99e4",
    "metadata": {},
    "outputs": [
@@ -316,7 +312,7 @@
        "{4: 1.9523809523809523, 1: 2.716666666666667, 3: 2.20703125, 2: 2.895}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 102,
    "id": "4922cf5d-866d-47f6-b233-7bafd830fc6c",
    "metadata": {},
    "outputs": [
@@ -520,7 +516,7 @@
        "17  0.095238  0.238095   0.253012"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 103,
    "id": "58456a38-bf80-4591-b20d-e326cab565c5",
    "metadata": {},
    "outputs": [
@@ -562,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 104,
    "id": "40563807-e7c0-4d32-bd5e-7c285e6ac068",
    "metadata": {},
    "outputs": [
