--- a/ruhr_shipping.ipynb
+++ b/ruhr_shipping.ipynb
@@ -414,44 +414,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "id": "2e7014f0-b096-48dc-b800-87aeee7adf87",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[12, 20, 16, 17]"
+       "[8]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(nx.center(G,weight='Distance')) # centers of the graph"
+    "list(nx.center(G,weight='distance')) # centers of the graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "a2ae94b8-661d-460f-9b4a-c62a155b99e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{4: 2.0, 1: 3.0, 3: 2.5238095238095237, 2: 2.5454545454545454}"
+       "{4: 1.9342105263157894,\n",
+       " 1: 2.617021276595745,\n",
+       " 3: 2.656470588235294,\n",
+       " 2: 2.6305555555555555}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nx.average_degree_connectivity(G, weight=\"Distance\")"
+    "nx.average_degree_connectivity(G, weight=\"distance\")"
    ]
   },
   {
